apps/authority/authority-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authority
  namespace: authority
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authority
  template:
    metadata:
      labels:
        app: authority
    spec:
      containers:
        - name: authority
          image: glejnhithi/authority:v1
          ports:
            - containerPort: 8080
