apps/authority/authority-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authority-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - authority.cb-interview.com
    port:
      number: 8080
      name: http
      protocol: HTTP
