apps/authority/authority-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority
  namespace: authority
spec:
  hosts:
  - authority.cb-interview.com
  gateways:
  - authority-gateway
  http:
  - route:
    - destination:
        host: authority.authority.svc.cluster.local
        port:
          number: 8080
